--- a/src/js/component/Planets.css
+++ b/src/js/component/Planets.css
@@ -1,63 +1,72 @@
 #containerPlanets {
-    position: relative;
-    padding-bottom: 60px;
-    background: linear-gradient(to bottom,  rgba(0, 0, 0, 0.5), rgba(0, 0, 127, 0.7)), url("https://static.videezy.com/system/resources/thumbnails/000/042/456/original/Sky-night-rotation-space-background.jpg"); 
-    background-size: cover;
-  }
-  
-  .scrollablePlanets {
-    overflow-y: auto;
-    max-height: 520px;
-    padding-right: 20px;
-    position: relative;
-    z-index: 0;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  
-  .card {
-    position: relative;
-    z-index: 2;
-    background-color: rgba(0, 0, 0, 0.6); 
-    border-radius: 15px; 
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5); /* Sombra sutil para dar profundidad */
-    transition: all 0.3s ease-in-out;
-  }
-  
-  .card:hover {
-    transform: translateY(-5px); /* Efecto sutil al pasar el ratón */
-    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.8); 
-  }
-  
-  .card-img-top {
-    border-radius: 15px 15px 0 0; /* Bordes redondeados en la parte superior */
-    object-fit: cover;
-    height: 180px;
-  }
-  
-  .card-body {
-    padding: 20px;
-  }
-  
-  .card-title {
-    font-size: 1.2rem;
-    color: #f0e68c; /* Un tono dorado o amarillo claro para los títulos */
-  }
-  
-  .card-text {
-    font-size: 0.9rem;
-    color: rgba(255, 255, 255, 0.8); /* Texto blanco sutil */
-  }
-  
-  .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    z-index: 1;
-    pointer-events: none;
-  }
-  
+  position: relative;
+  padding-bottom: 60px; /* Deja espacio para el botón de Load More */
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 127, 0.7)), 
+              url("https://static.videezy.com/system/resources/thumbnails/000/042/456/original/Sky-night-rotation-space-background.jpg");
+  background-size: cover;
+}
+
+#containerCharacters {
+  display: flex;
+  overflow-x: auto; /* Esto habilita el scroll horizontal */
+  flex-wrap: nowrap; /* Para mantener las cards en una sola fila */
+  padding-right: 20px;
+  position: relative;
+  z-index: 0;
+}
+
+.cardContainer {
+  flex-shrink: 0; /* Evita que las cards se reduzcan de tamaño */
+  width: 240px; 
+  margin-right: 20px; 
+}
+
+.cardRounded {
+  position: relative;
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.6); 
+  border-radius: 15px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
+  transition: all 0.3s ease-in-out;
+}
+
+.cardRounded:hover {
+  transform: translateY(-5px); 
+  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.8);
+}
+
+.customCardImg {
+  border-radius: 15px 15px 0 0; /* Bordes redondeados en la parte superior */
+  object-fit: cover; 
+  min-height: 240px; /* Altura mínima de la imagen */
+  min-width: 240px; 
+  width: 100%; /
+  height: auto; 
+}
+
+
+.card-body {
+  padding: 20px;
+}
+
+.card-title {
+  font-size: 1.2rem;
+  color: #f0e68c; 
+}
+
+.card-text {
+  font-size: 0.9rem;
+  color: rgba(255, 255, 255, 0.8); 
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+  pointer-events: none;
+}
