FAVORITES FIXED, SCROLL ONE ROW FIXED

--- a/src/js/component/Planets.css
+++ b/src/js/component/Planets.css
@@ -41,7 +41,7 @@
   object-fit: cover; 
   min-height: 240px; /* Altura mínima de la imagen */
   min-width: 240px; 
-  width: 100%; /
+  width: 100%; 
   height: auto; 
 }
 
